# stats_analyzer

./: README.md  pyproject.toml  requirements.txt  test_table_builder.py
output/example_runs/clinical_trial_ancova/: run_summary.json
output/example_runs/clinical_trial_ancova_v2/: run_summary.json
output/example_runs/manufacturing_anova/: run_summary.json
output/example_runs/manufacturing_anova_v2/: run_summary.json
output/example_runs/manufacturing_anova_v3/: run_summary.json
output/example_runs/sparse_group_qc/: run_summary.json
output/stats_e2e_tables/tables/: adjusted_means.csv  dataset_preview.csv  fit_statistics.csv  flags.csv  parameter_estimates.csv
output/stats_e2e_tables_custom/tables/: assumption_metrics.csv  high_outcome_subjects.csv  validation_status.csv
sample_data/: ancova_sample.csv
sample_data/examples/: clinical_trial_ancova.csv  manufacturing_anova.csv  sparse_groups_demo.csv
src/stats_analyzer/: __init__.py
templates/: default_report_template.yaml  table_config_example.yaml  table_config_overflow_appendix.yaml  template_sdk_reference.yaml
templates/examples/: README.md  analysis_profile_clinical.yaml  analysis_profile_operations.yaml  analysis_profile_sparse_qc.yaml  generated_output_index.md  report_clinical_template.yaml  report_operations_template.yaml  report_sparse_qc_template.yaml  table_clinical_template.yaml  table_operations_template.yaml  table_sparse_qc_template.yaml
tests/stats_analyzer/: conftest.py  test_cli_parser.py  test_pdf_builder.py  test_thresholds_and_defaults.py  test_validation_and_assumptions.py
(+65 files in other folders)
