[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stats-analyzer"
version = "0.1.0"
description = "CLI-first statistics analyzer scaffold for ANOVA and ANCOVA workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "PyYAML>=6.0",
]

[project.scripts]
stats-analyzer = "stats_analyzer.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
